--- a/src/front_end/package.json
+++ b/src/front_end/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/x-data-grid": "^5.2.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "logrocket": "^2.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
