--- a/src/front_end/package.json
+++ b/src/front_end/package.json
@@ -55,5 +55,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000",
+  "devDependencies": {
+    "prettier": "2.5.1"
+  }
 }
